--- a/hotelExamen/public/components/InicioSesion/inicioSesion.view.html
+++ b/hotelExamen/public/components/InicioSesion/inicioSesion.view.html
@@ -16,7 +16,7 @@
 
             <div class="form-group col-md-4">
                 <label for="txtcontrasenna">Contraseña</label>
-                <input type="contrasenna" id="txtcontrasenna" class="form-control" name="campocontrasenna" ng-model="vm.datos.contrasenna"
+                <input type="password" id="txtcontrasenna" class="form-control" name="campocontrasenna" ng-model="vm.datos.contrasenna"
                     required>
                 <div ng-messages="formInicioSesion.campocontrasenna.$error">
                     <div ng-message="required">
