--- a/hotelExamen/public/components/hoteles/registrarHotel/registrarHotel.view.html
+++ b/hotelExamen/public/components/hoteles/registrarHotel/registrarHotel.view.html
@@ -6,7 +6,7 @@
       <div class="form-group">
         <label for="txtname">Nombre del hotel</label>
         <input type="text" id="txtname" class="form-control" name="campoid" ng-model="vm.nuevoHotel.id" required>
-        <div ng-messages="formRegisterHotel.campoCedula.$error" role="alert">
+        <div ng-messages="formRegisterHotel.campo_id.$error" role="alert">
           <div ng-message="required">
             <small class="form-text text-muted">Este campo es requerido</small>
           </div>
