--- a/hotelExamen/public/components/hoteles/registrarHotel/registrarHotel.view.html
+++ b/hotelExamen/public/components/hoteles/registrarHotel/registrarHotel.view.html
@@ -1,11 +1,11 @@
 <h1>Vista del registro de hoteles</h1>
 <div>
   <div class="col-md-4 my-4">
-    <form ng-submit="vm.preRegisterHotel(vm.nuevoHotel)" name="formRegisterHotel" novalidate autocomplete="off">
+    <form ng-submit="vm.preRegistrarHotel (vm.nuevoHotel)" name="formRegisterHotel" novalidate autocomplete="off">
 
       <div class="form-group">
         <label for="txtname">Nombre del hotel</label>
-        <input type="text" id="txtname" class="form-control" name="campoid" ng-model="vm.nuevoHotel.id" required>
+        <input type="text" id="txtname" class="form-control" name="campoid" ng-model="vm.nuevoHotel.nombreHotel" required>
         <div ng-messages="formRegisterHotel.campo_id.$error" role="alert">
           <div ng-message="required">
             <small class="form-text text-muted">Este campo es requerido</small>
@@ -24,13 +24,13 @@
 
       <div class="form-group my-4">
         <label for="filePhoto">Fotografía del hotel</label>
-        <input type="file" class="form-control-file" id="filePhoto" files-input ng-model="vm.nuevoHotel.photo">
+        <input type="file" class="form-control-file" id="filePhoto" files-input ng-model="vm.nuevoHotel.foto">
       </div>
 
       <div class="form-group">
         <label for="sltProvincia">Provincia</label>
-        <select id="sltProvincia" class="form-control" name="sltProvincias" ng-change="vm.rellenarCantones(vm.nuevoUsuario.province._id)"
-          ng-options="provincia as provincia.name for provincia in vm.provincias track by provincia._id" ng-model="vm.nuevoUsuario.province"
+        <select id="sltProvincia" class="form-control" name="sltProvincias" ng-change="vm.rellenarCantones(vm.nuevoUsuario.provincia._id)"
+          ng-options="provincia as provincia.name for provincia in vm.provincias track by provincia._id" ng-model="vm.nuevoUsuario.provincia"
           required>
           <option value="">-- Seleccione una Provincia --</option>
         </select>
@@ -44,7 +44,7 @@
       <div class="form-group">
         <label for="sltCanton">Cantón</label>
         <select id="sltCanton" class="form-control" name="sltCantones" ng-change="vm.rellenarDistrito(vm.nuevoUsuario.canton._id)"
-          ng-options="canton as canton.name for canton in vm.cantones track by canton._id" ng-model="vm.nuevoUsuario.canton" ng-disabled="!vm.nuevoUsuario.province"
+          ng-options="canton as canton.name for canton in vm.cantones track by canton._id" ng-model="vm.nuevoUsuario.canton" ng-disabled="!vm.nuevoUsuario.provincia"
           required>
           <option value="">-- Seleccione un Cantón --</option>
         </select>
@@ -58,7 +58,7 @@
       <div class="form-group">
         <label for="sltDistrito">Distrito</label>
         <select id="sltDistrito" class="form-control" name="sltDistritos" ng-options="distrito as distrito.name for distrito in vm.distritos track by distrito._id"
-          ng-model="vm.nuevoUsuario.distrite" ng-disabled="!vm.nuevoUsuario.canton" required>
+          ng-model="vm.nuevoUsuario.distrito" ng-disabled="!vm.nuevoUsuario.canton" required>
           <option value="">-- Seleccione un Distrito --</option>
         </select>
         <div ng-messages="formRegistroUsuarios.sltDistritos.$error" role="alert">
@@ -74,7 +74,7 @@
 
       <div class="form-group">
         <label for="txtNombre1">Dirección exacta del hotel</label>
-        <textarea id="txtNombre1" class="form-control" name="campoNombre" ng-model="vm.nuevoHotel.address" pattern="[ñáéíóúA-Za-z ]+"
+        <textarea id="txtNombre1" class="form-control" name="campoNombre" ng-model="vm.nuevoHotel.direccion" pattern="[ñáéíóúA-Za-z ]+"
           required></textarea>
         <div ng-messages="formRegisterHotel.campoNombre.$error" role="alert">
           <div ng-message="required">
@@ -93,8 +93,8 @@
       
 
       <div class="form-group">
-        <label for="txtNombre2">Segundo nombre</label>
-        <input type="text" id="txtNombre2" class="form-control" name="campoSegundoNombre" ng-model="vm.nuevoHotel.secondName" pattern="[ñáéíóúA-Za-z ]+">
+        <label for="txtNombre2">Telefono del hotel</label>
+        <input type="text" id="txtNombre2" class="form-control" name="campoSegundoNombre" ng-model="vm.nuevoHotel.telefonoServicioCliente" pattern="[ñáéíóúA-Za-z ]+">
         <div ng-messages="formRegisterHotel.campoNombre.$error" role="alert">
           <div ng-message="pattern">
             <small class="form-text text-muted">Formato incorrecto</small>
@@ -103,8 +103,8 @@
       </div>
 
       <div class="form-group">
-        <label for="txtApellido1">Primer apellido</label>
-        <input type="text" id="txtApellido1" class="form-control" name="campoPrimerApellido" ng-model="vm.nuevoHotel.firstSurname"
+        <label for="txtApellido1">Correo del hotel</label>
+        <input type="text" id="txtApellido1" class="form-control" name="campoPrimerApellido" ng-model="vm.nuevoHotel.correoServicioCliente"
           required>
         <div ng-messages="formRegisterHotel.campoPrimerApellido.$error" role="alert">
           <div ng-message="required">
@@ -116,13 +116,13 @@
       </div>
 
       <div class="form-group">
-        <label for="txtApellido2">Segundo apellido</label>
-        <input type="text" id="txtApellido2" class="form-control" name="campoSegundoApellido" ng-model="vm.nuevoHotel.secondSurname">
+        <label for="txtApellido2">Telefono de reservaciones</label>
+        <input type="text" id="txtApellido2" class="form-control" name="campoSegundoApellido" ng-model="vm.nuevoHotel.telefonoReservacion">
       </div>
 
       <div class="form-group">
-        <label for="txtphone">Teléfono</label>
-        <input type="text" id="txtphone" class="form-control" name="campoTelefono" ng-model="vm..phone" required>
+        <label for="txtphone">Correo de reservaciones</label>
+        <input type="text" id="txtphone" class="form-control" name="campoTelefono" ng-model="vm.nuevoHotel.correoReservacion" required>
         <div ng-messages="formRegisterHotel.campoTelefono.$error" role="alert">
           <div ng-message="required">
             <small class="form-text text-muted">Este campo es requerido</small>
@@ -130,36 +130,6 @@
           <div ng-message="email">This field must be a valid email address.</div>
           <div ng-message="maxlength">This field can be at most 15 characters long.</div>
         </div>
-      </div>
-
-      <div class="form-group">
-        <label for="dtFechaNacimiento">Fecha nacimiento</label>
-        <input type="date" id="dtFechaNacimiento" class="form-control" name="campoFecha" ng-model="vm.nuevoHotel.birthDate" required>
-      </div>
-
-      <div class="form-group">
-        <label for="txtEmail">Correo electrónico</label>
-        <input type="email" id="txtEmail" class="form-control" name="campoCorreo" ng-model="vm.nuevoHotel.email" required>
-        <div ng-messages="formRegisterHotel.campoCorreo.$error" role="alert">
-          <div ng-message="required">
-            <small class="form-text text-muted">Este campo es requerido</small>
-          </div>
-          <div ng-message="email">
-            <small class="form-text text-muted">EL formato del correo electrónico es incorrecto</small>
-          </div>
-          <div ng-message="maxlength">This field can be at most 15 characters long.</div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="txtContrasenna">Contraseña</label>
-        <input type="password" id="txtContrasenna" class="form-control" name="campoContrasenna" required>
-      </div>
-
-      <div class="form-group">
-        <label for="txtConfirmContrasenna">Confirmar contraseña</label>
-        <input type="password" id="txtConfirmContrasenna" class="form-control" name="campoConfirmContrasenna" ng-model="vm.nuevoHotel.password"
-          required>
       </div>
 
       <button type="submit" class="btn btn-success">Registrar</button>
