vista de registro de hoteles

--- a/public/components/main/main.view.html
+++ b/public/components/main/main.view.html
@@ -1,8 +1,8 @@
 <main class="row" id="mainComponent">
-    <section class="col-md-6 float-left">
-
+    <section class="col-md-2 float-left">
+        <menu-Lateral></menu-Lateral>
     </section>
-    <section class="col-md-6 float-right">
+    <section class="col-md-10 float-right">
         <div ui-view></div>
     </section>
 </main>
