--- a/public/components/hoteles/registrarHotel/registrarHotel.view.html
+++ b/public/components/hoteles/registrarHotel/registrarHotel.view.html
@@ -1,139 +1,181 @@
-<h1>Vista del registro de hoteles</h1>
-<div>
-  <div class="col-md-4 my-4">
-    <form ng-submit="vm.preRegistrarHotel (vm.nuevoHotel)" name="formRegisterHotel" novalidate autocomplete="off">
+<section id="registroHoteles" class="row">
+  <div class="mt-5 mb-0">
+    <div class="col-md-12 mb-5">
+      <h1 id="tituloPrincipal" class="mt-1">Registro de hoteles</h1>
+      <p class="text-center texto-descripcion">Ingrese los datos solicitados para registrar un hotel dentro de la plataforma de The Station</p>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <form ng-submit="vm.preRegistrarHotel(vm.nuevoHotel)" name="formRegisterHotel" novalidate autocomplete="off">
 
-      <div class="form-group">
-        <label for="txtname">Nombre del hotel</label>
-        <input type="text" id="txtname" class="form-control" name="campoid" ng-model="vm.nuevoHotel.nombreHotel" required>
-        <div ng-messages="formRegisterHotel.campo_id.$error" role="alert">
-          <div ng-message="required">
-            <small class="form-text text-muted">Este campo es requerido</small>
+      <div class="row">
+        <div class="form-group col-md-6">
+          <label for="tipoHotel">Example select</label>
+          <select class="form-control" id="tipoHotel" name="tipoHotel" ng-model="vm.nuevoHotel.tipoHotel" required>
+            <option value="De Montaña">De Montaña</option>
+            <option value="De Playa">De Playa</option>
+            <option value="De Cuidad<">De Cuidad</option>
+          </select>
+          <div ng-messages="formRegisterHotel.tipoHotel.$error" role="alert">
+            <div ng-message="required">
+              <small class="form-text text-muted">Este campo es requerido</small>
+            </div>
+            <div ng-message="maxlength">
+              <small class="form-text text-muted">Formato incorrecto</small>
+            </div>
+            <div ng-message="minlength">
+              <small class="form-text text-muted">Formato incorrecto</small>
+            </div>
+            <div ng-message="pattern">
+              <small class="form-text text-muted">Formato incorrecto, ingrese únicamente números</small>
+            </div>
           </div>
-          <div ng-message="maxlength">
-            <small class="form-text text-muted">Formato incorrecto</small>
-          </div>
-          <div ng-message="minlength">
-            <small class="form-text text-muted">Formato incorrecto</small>
-          </div>
-          <div ng-message="pattern">
-            <small class="form-text text-muted">Formato incorrecto, ingrese únicamente números</small>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="txtname">Nombre del hotel</label>
+          <input type="text" id="txtname" class="form-control" name="campoNombre" ng-model="vm.nuevoHotel.nombreHotel" required>
+          <div ng-messages="formRegisterHotel.campoNombre.$error" role="alert">
+            <div ng-message="required">
+              <small class="form-text text-muted">Este campo es requerido</small>
+            </div>
+            <div ng-message="maxlength">
+              <small class="form-text text-muted">Formato incorrecto</small>
+            </div>
+            <div ng-message="minlength">
+              <small class="form-text text-muted">Formato incorrecto</small>
+            </div>
+            <div ng-message="pattern">
+              <small class="form-text text-muted">Formato incorrecto, ingrese únicamente números</small>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="form-group my-4">
-        <label for="filePhoto">Fotografía del hotel</label>
-        <input type="file" class="form-control-file" id="filePhoto" files-input ng-model="vm.nuevoHotel.foto">
-      </div>
+      <div class="row mt-4">
+        <div class="form-group col-md-4">
+          <label for="sltProvincia">Provincia</label>
+          <select id="sltProvincia" class="form-control" name="sltProvincias" ng-change="vm.rellenarCantones(vm.nuevoUsuario.provincia._id)"
+            ng-options="provincia as provincia.name for provincia in vm.provincias track by provincia._id" ng-model="vm.nuevoUsuario.provincia"
+            required>
+            <option value="">-- Seleccione una Provincia --</option>
+          </select>
+          <div ng-messages="formRegistroUsuarios.sltProvincias.$error" role="alert">
+            <div ng-message="required">
+              <small class="form-text text-muted">Este campo es requerido</small>
+            </div>
+          </div>
+        </div>
 
-      <div class="form-group">
-        <label for="sltProvincia">Provincia</label>
-        <select id="sltProvincia" class="form-control" name="sltProvincias" ng-change="vm.rellenarCantones(vm.nuevoUsuario.provincia._id)"
-          ng-options="provincia as provincia.name for provincia in vm.provincias track by provincia._id" ng-model="vm.nuevoUsuario.provincia"
-          required>
-          <option value="">-- Seleccione una Provincia --</option>
-        </select>
-        <div ng-messages="formRegistroUsuarios.sltProvincias.$error" role="alert">
-          <div ng-message="required">
-            <small class="form-text text-muted">Este campo es requerido</small>
+        <div class="form-group col-md-4">
+          <label for="sltCanton">Cantón</label>
+          <select id="sltCanton" class="form-control" name="sltCantones" ng-change="vm.rellenarDistrito(vm.nuevoUsuario.canton._id)"
+            ng-options="canton as canton.name for canton in vm.cantones track by canton._id" ng-model="vm.nuevoUsuario.canton"
+            ng-disabled="!vm.nuevoUsuario.provincia" required>
+            <option value="">-- Seleccione un Cantón --</option>
+          </select>
+          <div ng-messages="formRegistroUsuarios.sltCantones.$error" role="alert">
+            <div ng-message="required">
+              <small class="form-text text-muted">Este campo es requerido</small>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group col-md-4">
+          <label for="sltDistrito">Distrito</label>
+          <select id="sltDistrito" class="form-control" name="sltDistritos" ng-options="distrito as distrito.name for distrito in vm.distritos track by distrito._id"
+            ng-model="vm.nuevoUsuario.distrito" ng-disabled="!vm.nuevoUsuario.canton" required>
+            <option value="">-- Seleccione un Distrito --</option>
+          </select>
+          <div ng-messages="formRegistroUsuarios.sltDistritos.$error" role="alert">
+            <div ng-message="required">
+              <small class="form-text text-muted">Este campo es requerido</small>
+            </div>
+            <div ng-message="email">
+              <small class="form-text text-muted">EL formato del correo electrónico es incorrecto</small>
+            </div>
+            <div ng-message="maxlength">This field can be at most 15 characters long.</div>
           </div>
         </div>
       </div>
 
-      <div class="form-group">
-        <label for="sltCanton">Cantón</label>
-        <select id="sltCanton" class="form-control" name="sltCantones" ng-change="vm.rellenarDistrito(vm.nuevoUsuario.canton._id)"
-          ng-options="canton as canton.name for canton in vm.cantones track by canton._id" ng-model="vm.nuevoUsuario.canton" ng-disabled="!vm.nuevoUsuario.provincia"
-          required>
-          <option value="">-- Seleccione un Cantón --</option>
-        </select>
-        <div ng-messages="formRegistroUsuarios.sltCantones.$error" role="alert">
-          <div ng-message="required">
-            <small class="form-text text-muted">Este campo es requerido</small>
+      <div class="row mt-4">
+        <div class="form-group col-md-6">
+          <label for="txtNombre1">Dirección exacta del hotel</label>
+          <textarea id="txtNombre1" class="form-control" name="campoNombre" ng-model="vm.nuevoHotel.direccion" pattern="[ñáéíóúA-Za-z ]+"
+            required></textarea>
+          <div ng-messages="formRegisterHotel.campoNombre.$error" role="alert">
+            <div ng-message="required">
+              <small class="form-text text-muted">Este campo es requerido</small>
+            </div>
+            <div ng-message="pattern">
+              <small class="form-text text-muted">Formato incorrecto</small>
+            </div>
           </div>
+        </div>
+
+        <div class="form-group col-md-6">
+          <label for="filePhoto">Fotografía del hotel</label>
+          <input type="file" class="form-control-file" id="filePhoto" files-input ng-model="vm.nuevoHotel.foto">
         </div>
       </div>
 
-      <div class="form-group">
-        <label for="sltDistrito">Distrito</label>
-        <select id="sltDistrito" class="form-control" name="sltDistritos" ng-options="distrito as distrito.name for distrito in vm.distritos track by distrito._id"
-          ng-model="vm.nuevoUsuario.distrito" ng-disabled="!vm.nuevoUsuario.canton" required>
-          <option value="">-- Seleccione un Distrito --</option>
-        </select>
-        <div ng-messages="formRegistroUsuarios.sltDistritos.$error" role="alert">
-          <div ng-message="required">
-            <small class="form-text text-muted">Este campo es requerido</small>
-          </div>
-          <div ng-message="email">
-            <small class="form-text text-muted">EL formato del correo electrónico es incorrecto</small>
-          </div>
-          <div ng-message="maxlength">This field can be at most 15 characters long.</div>
-        </div>
-      </div>
 
-      <div class="form-group">
-        <label for="txtNombre1">Dirección exacta del hotel</label>
-        <textarea id="txtNombre1" class="form-control" name="campoNombre" ng-model="vm.nuevoHotel.direccion" pattern="[ñáéíóúA-Za-z ]+"
-          required></textarea>
-        <div ng-messages="formRegisterHotel.campoNombre.$error" role="alert">
-          <div ng-message="required">
-            <small class="form-text text-muted">Este campo es requerido</small>
-          </div>
-          <div ng-message="pattern">
-            <small class="form-text text-muted">Formato incorrecto</small>
-          </div>
-        </div>
-      </div>
-
-      <ng-map id="map" center="current-location" styles="width: 50%; height: 20em;">
+      <ng-map id="map" center="current-location" styles="width: 100%; height: 20em;">
         <marker position="current-location" draggable="true" on-dragend="vm.getCurrentLocation()" coords="marker.coords" options="marker.options"></marker>
       </ng-map>
 
-      
+      <div class="row mt-4">
+        <div class="col-md-12">
+          <h2>Contacto del hotel</h2>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="txtNombre2">Telefono del hotel</label>
+          <input type="text" id="txtNombre2" class="form-control" name="campoSegundoNombre" ng-model="vm.nuevoHotel.telefonoServicioCliente"
+            pattern="[ñáéíóúA-Za-z ]+">
+          <div ng-messages="formRegisterHotel.campoNombre.$error" role="alert">
+            <div ng-message="pattern">
+              <small class="form-text text-muted">Formato incorrecto</small>
+            </div>
+          </div>
+        </div>
 
-      <div class="form-group">
-        <label for="txtNombre2">Telefono del hotel</label>
-        <input type="text" id="txtNombre2" class="form-control" name="campoSegundoNombre" ng-model="vm.nuevoHotel.telefonoServicioCliente" pattern="[ñáéíóúA-Za-z ]+">
-        <div ng-messages="formRegisterHotel.campoNombre.$error" role="alert">
-          <div ng-message="pattern">
-            <small class="form-text text-muted">Formato incorrecto</small>
+        <div class="form-group col-md-6">
+          <label for="txtApellido1">Correo del hotel</label>
+          <input type="text" id="txtApellido1" class="form-control" name="campoPrimerApellido" ng-model="vm.nuevoHotel.correoServicioCliente"
+            required>
+          <div ng-messages="formRegisterHotel.campoPrimerApellido.$error" role="alert">
+            <div ng-message="required">
+              <small class="form-text text-muted">Este campo es requerido</small>
+            </div>
+            <div ng-message="email">This field must be a valid email address.</div>
+            <div ng-message="maxlength">This field can be at most 15 characters long.</div>
           </div>
         </div>
       </div>
 
-      <div class="form-group">
-        <label for="txtApellido1">Correo del hotel</label>
-        <input type="text" id="txtApellido1" class="form-control" name="campoPrimerApellido" ng-model="vm.nuevoHotel.correoServicioCliente"
-          required>
-        <div ng-messages="formRegisterHotel.campoPrimerApellido.$error" role="alert">
-          <div ng-message="required">
-            <small class="form-text text-muted">Este campo es requerido</small>
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Contacto de reservaciones</h2>
+        </div>
+
+        <div class="form-group col-md-6">
+          <label for="txtApellido2">Telefono de reservaciones</label>
+          <input type="text" id="txtApellido2" class="form-control" name="campoSegundoApellido" ng-model="vm.nuevoHotel.telefonoReservacion">
+        </div>
+
+        <div class="form-group col-md-6">
+          <label for="txtphone">Correo de reservaciones</label>
+          <input type="text" id="txtphone" class="form-control" name="campoTelefono" ng-model="vm.nuevoHotel.correoReservacion" required>
+          <div ng-messages="formRegisterHotel.campoTelefono.$error" role="alert">
+            <div ng-message="required">
+              <small class="form-text text-muted">Este campo es requerido</small>
+            </div>
+            <div ng-message="email">This field must be a valid email address.</div>
+            <div ng-message="maxlength">This field can be at most 15 characters long.</div>
           </div>
-          <div ng-message="email">This field must be a valid email address.</div>
-          <div ng-message="maxlength">This field can be at most 15 characters long.</div>
         </div>
       </div>
-
-      <div class="form-group">
-        <label for="txtApellido2">Telefono de reservaciones</label>
-        <input type="text" id="txtApellido2" class="form-control" name="campoSegundoApellido" ng-model="vm.nuevoHotel.telefonoReservacion">
-      </div>
-
-      <div class="form-group">
-        <label for="txtphone">Correo de reservaciones</label>
-        <input type="text" id="txtphone" class="form-control" name="campoTelefono" ng-model="vm.nuevoHotel.correoReservacion" required>
-        <div ng-messages="formRegisterHotel.campoTelefono.$error" role="alert">
-          <div ng-message="required">
-            <small class="form-text text-muted">Este campo es requerido</small>
-          </div>
-          <div ng-message="email">This field must be a valid email address.</div>
-          <div ng-message="maxlength">This field can be at most 15 characters long.</div>
-        </div>
-      </div>
-
       <button type="submit" class="btn btn-success">Registrar</button>
     </form>
   </div>
-</div>
-</main>
+</section>
