--- a/public/sources/styles/style.scss
+++ b/public/sources/styles/style.scss
@@ -4,4 +4,4 @@
 @import"./general.style";
 
 // Estilos de la aplicación
-@import "components/registrarCliente.style", "components/landingpage.style", "components/inicioSesion.style";
+@import "components/registrarCliente.style", "components/landingpage.style", "components/inicioSesion.style", "components/main.style", "components/registroHotel.style";
