--- a/public/components/main/principal.main/home.view.html
+++ b/public/components/main/principal.main/home.view.html
@@ -1,1 +1,7 @@
-<h1>Hola soy el contenido principal</h1>
+<section>
+        <h2>¡Bienvenida {{vm.userName}}!</h2>
+    
+        <div class="container-fluid">
+    
+        </div>
+    </section>
