--- a/public/components/directives/sidebar/sidebar.html
+++ b/public/components/directives/sidebar/sidebar.html
@@ -1,14 +1,45 @@
-<aside>
-    <div class="list-group">
-        <a href="" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-
-        <a href="" ui-sref="main.registrarHotel" class="list-group-item list-group-item-action list-group-item-primary">Registro de hoteles</a>
-        <a href="" class="list-group-item list-group-item-action list-group-item-secondary">This is a secondary list group item</a>
-        <a href="" class="list-group-item list-group-item-action list-group-item-success">This is a success list group item</a>
-        <a href="" class="list-group-item list-group-item-action list-group-item-danger">This is a danger list group item</a>
-        <a href="" class="list-group-item list-group-item-action list-group-item-warning">This is a warning list group item</a>
-        <a href="" class="list-group-item list-group-item-action list-group-item-info">This is a info list group item</a>
-        <a href="" class="list-group-item list-group-item-action list-group-item-light">This is a light list group item</a>
-        <a href="" class="list-group-item list-group-item-action list-group-item-dark">This is a dark list group item</a>
-    </div>
-</aside>
+<aside id="sidebar" class="bg-black" style="height: 100vh;">
+        <a class="text-center d-none d-md-block d-lg-block d-xl-block" href="">
+            <img class="image-responsive mt-5" src="../../../sources/imgs/logo.png" width="200" height="" alt="">
+        </a>
+        <p class="text-center text-white d-none d-md-block d-lg-block d-xl-block my-5">
+            The Station te llevará a una experincia única que no te podés perder
+        </p>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+    
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="nav flex-column">
+                    <li class="nav-item active">
+                        <a class="nav-link text-white mb-4" href="" >
+                            <button type="button" class="btn btn btn-info">Cerrar Sesión</button>
+                        </a>
+                    </li>
+    
+                    <li class="nav-item active">
+                        <a class="nav-link text-white" href="" ui-sref="main.verPerfil" ui-sref-active="active">Ver Perfil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="">Calificar Hoteles</a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="" ui-sref="main.registrarHotel" ui-sref-active="active" ng-hide="vm.user.getRol() == 2">Registrar hoteles</a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="" ui-sref="main.listarHotel" ui-sref-active="active">Lista de hoteles</a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="" ui-sref="main.listarUsuarios" ui-sref-active="active" ng-hide="vm.user.getRol() == 2">Lista de usuarios</a>
+                    </li>
+                </ul>
+    
+            </div>
+        </nav>
+    </aside>
