--- a/public/components/landingPage/landingPage.view.html
+++ b/public/components/landingPage/landingPage.view.html
@@ -33,35 +33,35 @@
             <div class="col-md-6 mx-auto">
                 <h2 class="text-center my-5">¡Comparte tu opinión y gana!</h2>
 
-                <p class="text-justify">Estamos interesados ​​en conocer la experiencia de las almas aventureras y aquellos que buscan la paz</p>
+                <p class="text-justify">Estamos interesados ​​en conocer la experiencia de las almas aventureras y aquellos que buscan un ambiente lleno de paz</p>
 
                 <p class="text-justify">Cuéntanos tu experiencia en diferentes hoteles en Costa Rica y deja que otros turistas, tanto nacionales como extranjeros, disfruten de las riquezas de nuestro país.</p>
 
-                <p class="text-justify">Conviértase en un cliente <strong>premium</strong> al darnos calificaciones de los hoteles que ha visitado y gane <strong>puntos canjeables</strong> por descuentos en su próxima estadía en el hotel.</p>
+                <p class="text-justify">¡Se parte de la familia The Station y compartamos juntos la dicha de vivir en el país más feliz del mundo!</p>
             </div>
         </div>
     </section>
 
     <section class="container-fluid">
-        <div class="row" id="section-3">
+        <div class="row my-5" id="section-3">
 
-            <div class="col-md-2">
+            <div class="col-md-1 ml-5">
                 <img src="../../sources/imgs/icons/iconFood.png" width="100" alt="">
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-1">
                 <img src="../../sources/imgs/icons/iconBed.png" width="100" alt="">
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-1">
                 <img src="../../sources/imgs/icons/iconClean.png" width="100" alt="">
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-1">
                 <img src="../../sources/imgs/icons/iconCustomer.png" width="100" alt="">
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-1">
                 <img src="../../sources/imgs/icons/iconBuildin.png" width="100" alt="">
             </div>
             
