--- a/public/components/main/principal.main/home.view.html
+++ b/public/components/main/principal.main/home.view.html
@@ -1,7 +1,38 @@
 <section>
-        <h2>¡Bienvenida {{vm.userName}}!</h2>
+        <div class="mt-5 mb-0">
+            <div class="col-md-12 mb-5">
+                <h1 id="tituloPrincipal" class="mt-1">¡Bienvenida {{vm.userName}}!</h1>
+                <p class="texto-descripcion">En The Station puede ver hoteles registrados y también sus puntuaciones</p>
+            </div>
+        </div>
+        <h2></h2>
     
         <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="" ui-sref="main.listarUsuarios">
+                        <img src="../../../sources/imgs/principal/1.jpg" alt="" width="100%">
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <a href="" ui-sref="main.listarHotel">
+                        <img src="../../../sources/imgs/principal/2.jpg" alt="" width="100%">
+                    </a>
+                </div>
+            </div>
     
+            <div class="row mt-5">
+                <div class="col-md-6">
+                    <a href="">
+                        <img src="../../../sources/imgs/principal/3.png" alt="" width="100%">
+                    </a>
+                </div>
+    
+                <div class="col-md-6">
+                    <a href="">
+                        <img src="../../../sources/imgs/principal/4.png" alt="" width="100%">
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
