--- a/public/components/hoteles/ListarHotel/listarHotel.view.html
+++ b/public/components/hoteles/ListarHotel/listarHotel.view.html
@@ -1,5 +1,9 @@
 <section>
-        <div class="mt-5 mb-0">
+        <a href="" ui-sref="main.home" class="text-black mt-5 ml-3">
+                <i class="fas fa-chevron-left"></i>
+                <strong>Volver</strong>
+            </a>
+        <div class="mt-2 mb-0">
             <div class="col-md-12 mb-5">
                 <h1 id="tituloPrincipal" class="mt-1">Lista de hoteles</h1>
                 <p class="texto-muted">Lista de hoteles registrados dentro de The Station</p>
@@ -17,6 +21,7 @@
                     <p><strong>Ubicación:</strong> {{hotel.getProvincia().name}}, {{hotel.getCanton().name}}</p>
                     <p><strong>Dirección:</strong> {{hotel.getDireccion()}}</p>
                     <button type="button" class="btn btn-info" ng-click="vm.verHotel()">Ver Hotel</button>
+                    <button type="button" class="btn btn-secondary" ng-click="vm.editar(hotel)">Editar Hotel</button>
                 </div>
             </div>
         </div>
