--- a/public/components/usuarios/Cliente/listarCliente/listarCliente.view.html
+++ b/public/components/usuarios/Cliente/listarCliente/listarCliente.view.html
@@ -1,6 +1,10 @@
 <section>
         <div class="mt-5 mb-0">
             <div class="col-md-12 mb-5">
+                    <a href="" ui-sref="main.home" class="text-black link mt-5 ml-3">
+                            <i class="fas fa-chevron-left"></i>
+                            <strong>Volver</strong>
+                        </a>   
                 <h1 id="tituloPrincipal" class="mt-1">Lista de Usuarios</h1>
                 <p class="texto-muted">Lista de usuarios registrados dentro de The Station</p>
             </div>
